<resources>
    <string name="app_name">My Application</string>
    <string name="title">Mobius</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_article">ArticleActivity</string>
    <string name="hintForTitle">请输入标题</string>
    <string name="addPic">图片</string>
    <string name="show">预览</string>
    <string name="publish">发布</string>
    <string name="addLabel">标签</string>
    <string name="edit_area">编辑区</string>
    <string name="res_area">资源区</string>
    <string name="add_res">添加资源</string>
    <string name="unKnown">日期:待定</string>

</resources>
