<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dg123.myapplication.EditActivity">

    <RelativeLayout
        android:id="@+id/edit_topbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/main">
        <TextView
            android:id="@+id/edit_topbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="编辑"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="0px"
            android:layout_alignTop="@id/edit_topbar_title"
            android:layout_alignBottom="@id/edit_topbar_title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/back"
            android:onClick="back"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hintForTitle"
        android:maxLines="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_topbar" />

    <Button
        android:id="@+id/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/addLabel"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/show"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:onClick="tagChoose"/>

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/show"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/publish"
        app:layout_constraintLeft_toRightOf="@+id/addLabel"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/publish"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/show"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_area"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLabel" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/lightGray"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:labelFor="@+id/content"
        app:layout_constraintBottom_toTopOf="@+id/res"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_area"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_res"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_res" />

    <Button
        android:id="@+id/add_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/add_res"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/res"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:layout_editor_absoluteY="379dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/res"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_res" />

</android.support.constraint.ConstraintLayout>
